jdk library dependency cleanup
pom cleanup