@@ -39,7 +39,6 @@
 		<scope.activation>provided</scope.activation>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 		<maven.site.skip>false</maven.site.skip>
-		<maven.compiler.optimize>true</maven.compiler.optimize>
 		<maven.compiler.fork>true</maven.compiler.fork>
 		<maven.compiler.verbose>true</maven.compiler.verbose>
 		<maven.compiler.debug>true</maven.compiler.debug>
@@ -78,7 +77,7 @@
 		<version.javax.servlet-api>3.1.0</version.javax.servlet-api>
 		<version.javax.activation>1.1.1</version.javax.activation>
 		<version.javax.validation.api>2.0.1.Final</version.javax.validation.api>
-		<version.groovy>3.0.8</version.groovy>
+		<version.groovy>3.0.23</version.groovy>
 		<version.jackson>2.17.3</version.jackson>
 		<version.jackson-databind>2.17.3</version.jackson-databind>
 		<version.stax2-api>4.2</version.stax2-api>
@@ -490,50 +489,16 @@
 			<!-- -->
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcprov-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcprov-ext-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcmail-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcpg-jdk15to18</artifactId>
-				<version>${version.bouncycastle</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcpkix-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bcutil-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
-				<artifactId>bctsp-jdk15to18</artifactId>
-				<version>${version.bouncycastle}</version>
-			</dependency>
-			<!-- -->
-			<dependency>
-				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcprov-jdk18on</artifactId>
 				<version>${version.bouncycastle}</version>
 			</dependency>
+			<!--
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcprov-ext-jdk18on</artifactId>
 				<version>${version.bouncycastle}</version>
 			</dependency>
+			-->
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcmail-jdk18on</artifactId>
@@ -1732,7 +1697,6 @@
 					<testFailureIgnore>false</testFailureIgnore>
 					<forkMode>pertest</forkMode>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<argLine>--illegal-access=permit</argLine>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
 				</configuration>
@@ -1792,9 +1756,9 @@
 				<!--https://www.owasp.org/index.php/Top_10_2013-A9-Using_Components_with_Known_Vulnerabilities -->
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
-				<version>6.0.1</version>
+				<version>10.0.3</version>
 				<configuration>
-					<failBuildOnCVSS>4</failBuildOnCVSS>
+					<failBuildOnCVSS>8</failBuildOnCVSS>
 					<suppressionFiles>
 						<suppressionFile>${project.basedir}/owasp-dependency-check-suppression.xml</suppressionFile>
 					</suppressionFiles>
@@ -1835,7 +1799,6 @@
 					</rulesets>
 					<!--<targetjdk>${targetJdk}</targetjdk> -->
 					<format>xml</format>
-					<linkXref>true</linkXref>
 					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
 					<minimumTokens>100</minimumTokens>
 				</configuration>
@@ -1849,9 +1812,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.22.0</version>
-				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -1868,7 +1828,6 @@
 				<version>2.4</version>
 				<configuration>
 					<multipleLineComments>true</multipleLineComments>
-					<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
 					<tags>
 						<tag>TODO</tag>
 						<tag>FIXME</tag>
