@@ -271,7 +271,6 @@
 					<testFailureIgnore>false</testFailureIgnore>
 					<forkMode>pertest</forkMode>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<argLine>--illegal-access=permit</argLine>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
 				</configuration>
